CallFunctionBlock logic prototype

--- a/prometheus_req_ws/src/prometheus_req_interfaces/CMakeLists.txt
+++ b/prometheus_req_ws/src/prometheus_req_interfaces/CMakeLists.txt
@@ -14,6 +14,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/ScrewSlot.msg"
   "msg/EquipmentStatus.msg"
   "srv/CallFunctionBlock.srv"
+  "action/CallFunctionBlock.action"
 )
 
 ament_export_dependencies(rosidl_default_runtime)
