--- a/prometheus_req_ws/src/prometheus_req_interfaces/CMakeLists.txt
+++ b/prometheus_req_ws/src/prometheus_req_interfaces/CMakeLists.txt
@@ -8,6 +8,7 @@ endif()
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
+find_package(std_msgs REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/ScrewData.msg"
@@ -15,6 +16,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/EquipmentStatus.msg"
   "srv/CallFunctionBlock.srv"
   "action/CallFunctionBlock.action"
+  DEPENDENCIES std_msgs
 )
 
 ament_export_dependencies(rosidl_default_runtime)
