Add screwPickup functionality and enhance action handling
- Updated .gitignore to include ads_node_config.yaml
- Modified CallFunctionBlock.action to add int_param1 for screwPickup
- Enhanced ads_node.py with screwPickup logic and error checks
- Updated client_node.py to prompt for screw number during screwPickup

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ prometheus_req_ws/bin/
 prometheus_req_ws/lib/
 prometheus_req_ws/install/
 prometheus_req_ws/setupLAN.bash
+prometheus_req_ws/src/prometheus_req_bringup/config/ads_node_config.yaml
