--- a/prometheus_req_ws/src/prometheus_req_interfaces/package.xml
+++ b/prometheus_req_ws/src/prometheus_req_interfaces/package.xml
@@ -2,10 +2,10 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>prometheus_req_interfaces</name>
-  <version>0.0.0</version>
-  <description>Prometheus Requests Interfaces</description>
-  <maintainer email="enrico.piccinini@gmail.com">EP</maintainer>
-  <license>TODO: License declaration</license>
+  <version>1.0.0</version>
+  <description>Package containing all ROS 2 message, service, and action definitions for Prometheus request handling and equipment interfacing</description>
+  <maintainer email="davidepaossi@gmail.com">Davide Paossi</maintainer>
+  <license>Custom MIT License</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
