Update robot name in configuration, add screw tightening functionality(WIP), and enhance GUI for screw parameters

--- a/prometheus_req_ws/src/prometheus_req_bringup/config/ads_node_config.yaml
+++ b/prometheus_req_ws/src/prometheus_req_bringup/config/ads_node_config.yaml
@@ -1,6 +1,6 @@
 /ads_node:
   ros__parameters:
-    robot_name: "Giskard"
+    robot_name: "Prometheus"
 
     remote_ip: '10.10.10.5'
     remote_ads: '5.152.54.58.1.1'
