Refactor client node entry points; add API_node and CLI_node implementations for improved functionality

--- a/prometheus_req_ws/src/prometheus_req_interfaces/CMakeLists.txt
+++ b/prometheus_req_ws/src/prometheus_req_interfaces/CMakeLists.txt
@@ -15,6 +15,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/ScrewSlot.msg"
   "msg/EquipmentStatus.msg"
   "msg/Offset.msg"
+  "msg/InputOutput.msg"
   "srv/SetScrewBayState.srv"
   "action/CallFunctionBlock.action"
   DEPENDENCIES std_msgs
