Add RequestState service and implement state request handling in API_node; update CLI_node to call service for status

--- a/prometheus_req_ws/src/prometheus_req_interfaces/CMakeLists.txt
+++ b/prometheus_req_ws/src/prometheus_req_interfaces/CMakeLists.txt
@@ -17,6 +17,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/Offset.msg"
   "msg/InputOutput.msg"
   "srv/SetScrewBayState.srv"
+  "srv/RequestState.srv"
   "action/CallFunctionBlock.action"
   DEPENDENCIES std_msgs
 )
